Update index.html with link to homegrownnationalpark.org Convert privacy policy to pdf

--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
         <p>FREE Garden Planner with Design Service. 
             Your book will be personalized with your design and plant lists. I will research your area for appropriate natives to use in the design. $225 minimum. Fee for Design Service is $0.10 per sq ft.</p>
         <a href="javascript:void( window.open( 'https://form.jotform.com/242544141524146', 'blank', 'scrollbars=yes, toolbar=no, width=700, heigt=500' ) ) "> Landscape Design Questionnaire Form </a>
-        <p>Please see <a href="policy/privacy_policy_terms_conditions.html">Privacy Policy and Terms and Conditions</a>
+        <p>Please see <a href="policies_and_terms.pdf">Privacy Policy and Terms and Conditions</a>
         <p><br /></p>
         <h2>Help build a free database of landscape photos and lists of natives that work well in landscape design!</h2> 
-                <p>Please visit <a href="http://landscapewithnatives.com">Landscape with Natives</a> </p>
-        <a href="http://dancingsophiapublishing.com/garden_planner.html"><img src="coverandsamples.jpg"></a>
-     
+                <p>Please visit <a href="https://landscapewithnatives.com">Landscape with Natives</a> </p>
+        <p> Also see:</p><a href="https://dancingsophiapublishing.com/garden_planner.html"><img src="coverandsamples.jpg"></a>
+        <a href="https://homegrownnationalpark.org/"><img src="HNP_ON_THE_MAP_GREEN_010422.webp"></a>
+       <p> Questions? Email me at </p>
+       <p><a href="mailto:landscapewithnatives@gmail.com">landscapewithnatives@gmail.com</a></p>
     </div>
 </body>
 </html>
